added few buttons, serch options in interface

--- a/html/index.html
+++ b/html/index.html
@@ -20,5 +20,29 @@
 				<button class="buton-on-bar">Sign in</button>
 			</dir>
 		</div>
+		<div class="house-img">
+			<!-- house image as the background -->
+		</div>
+		<div class="search-option-menu">
+			<!-- <table border="1"> -->
+				<!-- <tr> -->
+					<!-- <td><button class="buton-on-option-menu">House</button></td> -->
+					<!-- <td><button class="buton-on-option-menu">Apartment</button></td> -->
+					<!-- <td><button class="buton-on-option-menu">Hotel</button></td> -->
+					<!-- <td><button class="buton-on-option-menu">Cafe</button></td> -->
+				<!-- </tr> -->
+			<!-- </table> -->
+			<button class="buton-on-option-menu">House</button>
+			<button class="buton-on-option-menu">Apartment</button>
+			<button class="buton-on-option-menu">Hotel</button>
+			<button class="buton-on-option-menu">Cafe</button>
+			<!-- <input type="url" id="url" placeholder="Enter an address, neighborhood, city or ZIP code"> -->
+			<div class="search-container">
+				<form action="/action_page.php">
+    			  <input type="text" placeholder="Enter an address, neighborhood, city or ZIP code" name="search">
+    			  <button type="submit"><i class="fa fa-search"></i></button>
+    			</form>
+			</div>
+		</div>
 	</body>
 </html>
