created and rectifies the issues with option menu

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 			<div class="search-container">
 				<form action="/action_page.php">
     			  <input type="text" placeholder="Enter an address, neighborhood, city or ZIP code" name="search">
-    			  <button type="submit"><i class="fa fa-search"></i></button>
+    			  <button type="submit">Search</button>
     			</form>
 			</div>
 		</div>
