added house icon in the bottom

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,10 @@
 		<div>
 			<div class="page-bar-cont">
 				<!-- page links here -->
-				<img src="../logo/house.png" width="130px" height="100px" alt="house" class="house-logo" style="float: left; border: 5px solid black;">
+				<img src="../logo/house.png" width="130px" height="100px" alt="house" class="house-logo" style="float: left; border: 5px solid DodgerBlue;">
+				<div class="page-bar-header1">
+					<h1>sellMe.com</h1>
+				</div>
 				<a class="page-bar-text" href="./home.html">Home</a>
 				<a class="page-bar-text" href="./buy.html">Buy</a>
 				<a class="page-bar-text" href="./sell.html">Sell</a>
@@ -24,14 +27,6 @@
 			<!-- house image as the background -->
 		</div>
 		<div class="search-option-menu">
-			<!-- <table border="1"> -->
-				<!-- <tr> -->
-					<!-- <td><button class="buton-on-option-menu">House</button></td> -->
-					<!-- <td><button class="buton-on-option-menu">Apartment</button></td> -->
-					<!-- <td><button class="buton-on-option-menu">Hotel</button></td> -->
-					<!-- <td><button class="buton-on-option-menu">Cafe</button></td> -->
-				<!-- </tr> -->
-			<!-- </table> -->
 			<button class="buton-on-option-menu">House</button>
 			<button class="buton-on-option-menu">Apartment</button>
 			<button class="buton-on-option-menu">Hotel</button>
@@ -43,6 +38,15 @@
     			  <button type="submit">Search</button>
     			</form>
 			</div>
+		</div>
+		<div class="news-feed-bar">
+			<!-- news feed bar here -->
+			<div class="feed-bar-house-icon">
+				<img src="../img/house-icon.png" alt="house-icon" width="50px" height="50px">
+			</div>
+		</div>
+		<div class="about-site">
+			<div class="img-galary"></div>
 		</div>
 	</body>
 </html>
