--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,6 @@
 			<div class="page-bar-cont">
 				<!-- page links here -->
 				<img src="../logo/house.png" width="130px" height="100px" alt="house" class="house-logo" style="float: left; border: 5px solid DodgerBlue;">
-				<div class="page-bar-header1">
-					<h1>sellMe.com</h1>
-				</div>
 				<a class="page-bar-text" href="./home.html">Home</a>
 				<a class="page-bar-text" href="./buy.html">Buy</a>
 				<a class="page-bar-text" href="./sell.html">Sell</a>
@@ -21,6 +18,7 @@
 				<button class="buton-on-bar" style="color: black">?</button>
 				<button class="buton-on-bar">Join</button>
 				<button class="buton-on-bar">Sign in</button>
+				<h1 class="page-bar-header1">sellMe.com</h1>
 			</dir>
 		</div>
 		<div class="house-img">
@@ -43,6 +41,13 @@
 			<!-- news feed bar here -->
 			<div class="feed-bar-house-icon">
 				<img src="../img/house-icon.png" alt="house-icon" width="50px" height="50px">
+			</div>
+			<div class="animated-text">
+				<!-- <p>Want to buy a house?</p> -->
+				<!-- <p>Want to rent a house?</p> -->
+				<!-- <p>Want an anex?</p> -->
+				<!-- <p>Call us +9471-255-9318</p> -->
+				<p></p>
 			</div>
 		</div>
 		<div class="about-site">
