image gallery created

--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div>
-			<div class="page-bar-cont">
+			<div class="page-bar-cont" id="bar-text">
 				<!-- page links here -->
 				<img src="../logo/house.png" width="130px" height="100px" alt="house" class="house-logo" style="float: left; border: 5px solid DodgerBlue;">
 				<a class="page-bar-text" href="./home.html">Home</a>
@@ -42,16 +42,52 @@
 			<div class="feed-bar-house-icon">
 				<img src="../img/house-icon.png" alt="house-icon" width="50px" height="50px">
 			</div>
-			<div class="animated-text">
-				<!-- <p>Want to buy a house?</p> -->
-				<!-- <p>Want to rent a house?</p> -->
-				<!-- <p>Want an anex?</p> -->
-				<!-- <p>Call us +9471-255-9318</p> -->
-				<p></p>
+			<div class="animated-text" id="animated-text">
+				<p>
+					<!-- Some animated text here -->
+				</p>
 			</div>
 		</div>
 		<div class="about-site">
-			<div class="img-galary"></div>
+			<div class="description-of-site">
+				<!-- small discription here -->
+				<h2>How we keep our trust...</h2>
+				<p>
+					As a leading property service provider, we ensure our clients satisfactory for 100%. From fast growing companies to houses, our service spreads while investing trust on the people. Houses, commertial buildings, apartments, bording places bare lands and all kinds of other propery related services are facilitade under sallMe.com with a fast but in a secure manner.
+				</p>
+			</div>
+			<div class="responsive">
+				<div class="img-gallery">
+        		  <a target="_blank" href="../img/lifestyle/2.jpg">
+        		    <img src="../img/lifestyle/2.jpg" alt="Cinque Terre" width="400" height="300">
+        		  </a>
+        		  <div class="desc">Add a description of the image here</div>
+        		</div>
+        	</div>
+        	<div class="responsive">
+        		<div class="img-gallery">
+        		  <a target="_blank" href="../img/lifestyle/3.jpg">
+        		    <img src="../img/lifestyle/3.jpg" alt="Forest" width="400" height="300">
+        		  </a>
+        		  <div class="desc">Add a description of the image here</div>
+        		</div>
+        	</div>
+        	<div class="responsive">
+        		<div class="img-gallery">
+        		  <a target="_blank" href="../img/lifestyle/4.jpg">
+        		    <img src="../img/lifestyle/4.jpg" alt="Northern Lights" width="400" height="300">
+        		  </a>
+        		  <div class="desc">Add a description of the image here</div>
+        		</div>
+        	</div>
+        	<div class="responsive">
+        		<div class="img-gallery">
+        		  <a target="_blank" href="../img/lifestyle/8.jpg">
+        		    <img src="../img/lifestyle/8.jpg" alt="Mountains" width="400" height="300">
+        		  </a>
+        		  <div class="desc">Add a description of the image here</div>
+        		</div>
+			</div>
 		</div>
 	</body>
 </html>
